--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: false
 language: ruby
+cache: bundle
 rvm:
   - 1.9
   - 2.0
   - 2.1
   - 2.2
-  - 2.3
-  - 2.4
-before_install: gem install bundler -v 1.14.4
+  - 2.3.0
+  - 2.4.0
+before_install: gem install bundler
